examples/test/testpolicy5048.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5048
  namespace: namespace498
spec:
  podSelector:
    matchLabels:
      key2: value22
      key1: value2
      key22: value12
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key47: value18
      podSelector:
        matchLabels:
          key4: value15
          key1: value45
          key24: value20
